# lerobot-scratch

./: .gitignore  CLAUDE.md  OPENVLA_ISSUES_FOUND.md  OpenCVCameraDSHOW.py  PI0_WORKFLOW.md  README.md  SO100FollowerSTS3250.py  SO100LeaderSTS3250.py  act_run_policy.py  act_train_local.py  adjust_gripper.py  analyze_dataset_diversity.py  benchmark_crop_sizes.py  calibrate_gripper.py  calibrate_so100_sts3250.py  check_cuda.py  check_gpu.py  check_gripper_calibration.py  config.json  dataset_check.py  dataset_check_local.py  debug_preprocessor.py  diagnose_grippers.py  download_dataset_from_hf.py  downsample_dataset.py  extract_frames.py  fix_camera_backend.py  fix_cuda.bat  identify_cameras_for_config.py  inference.py  inference_diffusion.py  inference_finetuned.py  listrobots.py  listrobots.win.py  merge_datasets.py  openvla_finetune.original.py  openvla_finetune.py  openvla_finetune_customloss.py  openvla_finetune_fixed.py  openvla_inference_finetuned.py  (+38 more)
.claude/: settings.local.json
calibration/: adjust_gripper.py  calibrate_gripper.py  calibrate_leader_gripper.py  calibrate_so100_sts3250.py  check_gripper_calibration.py  debug_gripper_teleop.py  diagnose_grippers.py  fix_gripper_calibration.py  leader_so100.json  so100_sts3250_leader.json  test_gripper_read.py
lerobot-tutorials/: align_arms.py  calibrate_arm.py  copy_calibration.py  echojointangles.py  find_cameras.py  measure_offset.py  record_dataset.py  teleoperate.py  test_cameras.py  train_policy.py
lerobot_robot_sts3250/: __init__.py  pyproject.toml
linux/: autoconfigure.nix.py
(+76 files in other folders)
